Archive2/5f/57ee02fcbc55bc/main.cpp
#include <chrono>


using namespace std::chrono;


int main()
{    
    // OK
    microseconds() = milliseconds(); 
    
    // ERROR: lossy conversion
    milliseconds() = microseconds();
}
